@@ -1,6 +1,5 @@
 package com.mrbysco.roughlyenoughprofessions.rei;
 
-import com.mojang.blaze3d.vertex.PoseStack;
 import me.shedaniel.math.Point;
 import me.shedaniel.math.Rectangle;
 import me.shedaniel.rei.api.client.gui.Renderer;
@@ -14,6 +13,7 @@ import net.minecraft.client.gui.Font;
 import net.minecraft.client.gui.screens.Screen;
 import net.minecraft.network.chat.Component;
 import net.minecraft.world.item.Items;
+import org.joml.Matrix3x2fStack;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -43,22 +43,22 @@ public class ProfessionCategory implements DisplayCategory<ProfessionDisplayNeoF
 		widgets.add(Widgets.createArrow(new Point(startPoint.x + 24, startPoint.y)));
 		widgets.add(Widgets.withTranslate(Widgets.createDrawableWidget((guiGraphics, mouseX, mouseY, v) -> {
 			// Draw entity name
-			PoseStack poseStack = guiGraphics.pose();
-			poseStack.pushPose();
-			poseStack.translate(1, 0, 0);
+			Matrix3x2fStack poseStack = guiGraphics.pose();
+			poseStack.pushMatrix();
+			poseStack.translate(1, 0);
 			Font font = Minecraft.getInstance().font;
 			String text = Screen.hasShiftDown() ? display.getProfessionName().toString() : display.getDisplayName().getString();
 			if (font.width(text) > 122) {
-				poseStack.scale(0.75F, 0.75F, 0.75F);
+				poseStack.scale(0.75F, 0.75F);
 			}
 			guiGraphics.drawString(font, text, 0, 0, 8, false);
-			poseStack.popPose();
-		}), bounds.x + 3, bounds.y + 3, 0));
+			poseStack.popMatrix();
+		}), bounds.x + 3, bounds.y + 3));
 		widgets.add(Widgets.withTranslate(Widgets.createDrawableWidget((guiGraphics, mouseX, mouseY, v) -> {
 			// Draw entity
 			display.drawEntry(guiGraphics, mouseX, mouseY);
-		}), bounds.x + 56, bounds.y + 2, 0));
-		widgets.add(Widgets.createSlot(new Point(startPoint)).entries(display.getInputEntries().get(0)).markInput());
+		}), bounds.x + 56, bounds.y + 2));
+		widgets.add(Widgets.createSlot(new Point(startPoint)).entries(display.getInputEntries().getFirst()).markInput());
 
 		return widgets;
 	}
